# tarpc-demo

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  server.rs
