[package]
name = "tarpc-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.29", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
